--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 drf-social-oauth2 = "==3.1.0"
 django-environ = "*"
 django-cors-headers = "*"
+djangorestframework = "*"
 
 [dev-packages]
 
