--- a/localstaging/django.yml
+++ b/localstaging/django.yml
@@ -3,7 +3,7 @@ services:
     container_name: django_local_staging
     build:
       context: ../portfolio_api
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.staging
     environment:
       - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
       - DJANGO_SECRET_KEY_DEV=${DJANGO_SECRET_KEY_DEV}
