--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ pillow = "*"
 django-storages = "*"
 boto3 = "*"
 gunicorn = "*"
+celery = "*"
+redis = "*"
+django-celery-beat = "*"
 
 [dev-packages]
 
