--- a/localstaging/django_celery.yml
+++ b/localstaging/django_celery.yml
@@ -119,4 +119,4 @@ services:
       - "8000:8000"
     volumes:
       - ../portfolio_api:/app
-    command: sh -c "python manage.py collectstatic --noinput && gunicorn portfolio_api.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+    command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate && python manage.py create_oauth_app &&gunicorn portfolio_api.wsgi:application --bind 0.0.0.0:8000 --workers 3"
