Renamed AWS dev env vars

--- a/localstaging/django_celery.yml
+++ b/localstaging/django_celery.yml
@@ -20,10 +20,10 @@ services:
       - GOOGLE_OAUTH2_CLIENT_ID=${GOOGLE_OAUTH2_CLIENT_ID}
       - GOOGLE_OAUTH2_CLIENT_SECRET=${GOOGLE_OAUTH2_CLIENT_SECRET}
       - GOOGLE_OAUTH2_REDIRECT_URI_DEV=${GOOGLE_OAUTH2_REDIRECT_URI_DEV}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
-      - AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
+      - AWS_ACCESS_KEY_ID_DEV=${AWS_ACCESS_KEY_ID_DEV}
+      - AWS_SECRET_ACCESS_KEY_DEV=${AWS_SECRET_ACCESS_KEY_DEV}
+      - AWS_STORAGE_BUCKET_NAME_DEV=${AWS_STORAGE_BUCKET_NAME_DEV}
+      - AWS_S3_REGION_NAME_DEV=${AWS_S3_REGION_NAME_DEV}
       - ALLOWED_IMAGE_EXTENSIONS=${ALLOWED_IMAGE_EXTENSIONS}
       - MAX_POST_LENGTH=${MAX_POST_LENGTH}
       - MAX_IMAGE_SIZE=${MAX_IMAGE_SIZE}
@@ -37,7 +37,7 @@ services:
       - CONTACT_EMAIL=${CONTACT_EMAIL}
       - EMAIL_PORTFOLIO_LINK_DEV=${EMAIL_PORTFOLIO_LINK_DEV}
       - EMAIL_PORTFOLIO_LINK_PROD=${EMAIL_PORTFOLIO_LINK_PROD}
-      - EMAIL_LOGO_URL=${EMAIL_LOGO_URL}
+      - EMAIL_LOGO_URL_DEV=${EMAIL_LOGO_URL_DEV}
       - CELERY_BROKER_URL_DEV=${CELERY_BROKER_URL_DEV}
       - CELERY_RESULT_BACKEND_DEV=${CELERY_RESULT_BACKEND_DEV}
     volumes:
@@ -58,10 +58,10 @@ services:
       - GOOGLE_OAUTH2_CLIENT_ID=${GOOGLE_OAUTH2_CLIENT_ID}
       - GOOGLE_OAUTH2_CLIENT_SECRET=${GOOGLE_OAUTH2_CLIENT_SECRET}
       - GOOGLE_OAUTH2_REDIRECT_URI_DEV=${GOOGLE_OAUTH2_REDIRECT_URI_DEV}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
-      - AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
+      - AWS_ACCESS_KEY_ID_DEV=${AWS_ACCESS_KEY_ID_DEV}
+      - AWS_SECRET_ACCESS_KEY_DEV=${AWS_SECRET_ACCESS_KEY_DEV}
+      - AWS_STORAGE_BUCKET_NAME_DEV=${AWS_STORAGE_BUCKET_NAME_DEV}
+      - AWS_S3_REGION_NAME_DEV=${AWS_S3_REGION_NAME_DEV}
       - ALLOWED_IMAGE_EXTENSIONS=${ALLOWED_IMAGE_EXTENSIONS}
       - MAX_POST_LENGTH=${MAX_POST_LENGTH}
       - MAX_IMAGE_SIZE=${MAX_IMAGE_SIZE}
@@ -75,7 +75,7 @@ services:
       - CONTACT_EMAIL=${CONTACT_EMAIL}
       - EMAIL_PORTFOLIO_LINK_DEV=${EMAIL_PORTFOLIO_LINK_DEV}
       - EMAIL_PORTFOLIO_LINK_PROD=${EMAIL_PORTFOLIO_LINK_PROD}
-      - EMAIL_LOGO_URL=${EMAIL_LOGO_URL}
+      - EMAIL_LOGO_URL_DEV=${EMAIL_LOGO_URL_DEV}
       - CELERY_BROKER_URL_DEV=${CELERY_BROKER_URL_DEV}
       - CELERY_RESULT_BACKEND_DEV=${CELERY_RESULT_BACKEND_DEV}
     volumes:
@@ -95,10 +95,10 @@ services:
       - GOOGLE_OAUTH2_CLIENT_ID=${GOOGLE_OAUTH2_CLIENT_ID}
       - GOOGLE_OAUTH2_CLIENT_SECRET=${GOOGLE_OAUTH2_CLIENT_SECRET}
       - GOOGLE_OAUTH2_REDIRECT_URI_DEV=${GOOGLE_OAUTH2_REDIRECT_URI_DEV}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
-      - AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
+      - AWS_ACCESS_KEY_ID_DEV=${AWS_ACCESS_KEY_ID_DEV}
+      - AWS_SECRET_ACCESS_KEY_DEV=${AWS_SECRET_ACCESS_KEY_DEV}
+      - AWS_STORAGE_BUCKET_NAME_DEV=${AWS_STORAGE_BUCKET_NAME_DEV}
+      - AWS_S3_REGION_NAME_DEV=${AWS_S3_REGION_NAME_DEV}
       - ALLOWED_IMAGE_EXTENSIONS=${ALLOWED_IMAGE_EXTENSIONS}
       - MAX_POST_LENGTH=${MAX_POST_LENGTH}
       - MAX_IMAGE_SIZE=${MAX_IMAGE_SIZE}
@@ -112,7 +112,7 @@ services:
       - CONTACT_EMAIL=${CONTACT_EMAIL}
       - EMAIL_PORTFOLIO_LINK_DEV=${EMAIL_PORTFOLIO_LINK_DEV}
       - EMAIL_PORTFOLIO_LINK_PROD=${EMAIL_PORTFOLIO_LINK_PROD}
-      - EMAIL_LOGO_URL=${EMAIL_LOGO_URL}
+      - EMAIL_LOGO_URL_DEV=${EMAIL_LOGO_URL_DEV}
       - CELERY_BROKER_URL_DEV=${CELERY_BROKER_URL_DEV}
       - CELERY_RESULT_BACKEND_DEV=${CELERY_RESULT_BACKEND_DEV}   
     ports:
