--- a/portfolio_api/Dockerfile
+++ b/portfolio_api/Dockerfile
@@ -1,5 +1,13 @@
 FROM python:3.10.11-alpine
 
+RUN apk update && apk add --no-cache \
+    postgresql-dev \
+    gcc \
+    python3-dev \
+    musl-dev \
+    libffi-dev \
+    openssl-dev
+
 WORKDIR /app
 
 COPY ./requirements.txt /app/
