Set build workflows to only run on successful migrate

--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -1,9 +1,11 @@
-name: Build and Push to ECR
+name: Build and Push to ECR (Dev)
 
 on:
-  push:
-    branches:
-      - dev
+  workflow_run:
+    workflows:
+      - 'migrate_dev'
+    types:
+      - completed      
 
 permissions:
   id-token: write
