--- a/.github/workflows/migrate_dev.yaml
+++ b/.github/workflows/migrate_dev.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - dev
 
+permissions:
+  id-token: write
+  contents: read      
+
 jobs:
   run-migrations:
     runs-on: ubuntu-latest
