--- a/.github/workflows/migrate_dev.yaml
+++ b/.github/workflows/migrate_dev.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Run ECS Migration Task
         run: |
           source djangoenv
+          export AWS_REGION=$AWS_REGION_DEV
           export AWS_CLUSTER_NAME=$AWS_MIGRATE_CLUSTER_NAME_DEV
           export AWS_MIGRATE_TASK_DEF=$AWS_MIGRATE_TASK_DEF_DEV
           export AWS_MIGRATE_SUBNETS=$AWS_MIGRATE_SUBNETS_DEV
