--- a/.github/workflows/migrate_dev.yaml
+++ b/.github/workflows/migrate_dev.yaml
@@ -22,6 +22,12 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_GITHUB_ROLE_ARN_DEV }}
+          aws-region: ${{ secrets.AWS_REGION_DEV }}          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
