BuildAndPush before migrate

--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -1,11 +1,9 @@
 name: Build and Push to ECR (Dev)
 
 on:
-  workflow_run:
-    workflows:
-      - 'Call ECS Migration Task (Dev) - Off'
-    types:
-      - completed
+  push:
+    branches:
+      - dev
 
 permissions:
   id-token: write
