--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Create and push env to S3
         run: |
-          echo "${{ secrets.DJANGO_ENV_DEV }}" > djangoenv
+          echo "${{ secrets.DJANGO_ENV }}" > djangoenv
           source djangoenv
           aws s3 cp djangoenv s3://$AWS_S3_ENV_BUCKET_DEV/django-celery.env
 
