--- a/.github/workflows/migrate_dev.yaml
+++ b/.github/workflows/migrate_dev.yaml
@@ -37,7 +37,7 @@ jobs:
         
       - name: Load environment variables
         run: |
-          echo "${{ secrets.DJANGO_ENV_DEV }}" > djangoenv
+          echo "${{ secrets.DJANGO_ENV }}" > djangoenv
           
       - name: Run ECS Migration Task
         run: |
