Add pip upgrade in dockerfile

--- a/portfolio_api/Dockerfile
+++ b/portfolio_api/Dockerfile
@@ -8,6 +8,8 @@ RUN apk update && apk add --no-cache \
     libffi-dev \
     openssl-dev
 
+RUN pip install --upgrade pip
+
 WORKDIR /app
 
 COPY ./requirements.txt /app/
