--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -9,8 +9,29 @@ permissions:
   id-token: write
   contents: read
 
+
 jobs:
+  push_env:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Load environment
+        run: |
+          echo "${{ secrets.DJANGO_ENV }}" > djangoenv
+          source djangoenv
+          echo "ENV_BUCKET=$AWS_S3_ENV_BUCKET_DEV" >> $GITHUB_ENV
+
+      - name: Push env to S3
+        uses: ./.github/workflows/pushenv_S3_dev.yml
+        with:
+          aws_role: ${{ secrets.AWS_GITHUB_ROLE_ARN_DEV }}
+          aws_region: ${{ secrets.AWS_REGION_DEV }}
+          env: ${{ secrets.DJANGO_ENV }}
+          bucket: $ENV_BUCKET
+          targetname: django-celery.env
+
   deploy:
+    needs: push_env
     runs-on: ubuntu-latest
 
     steps:
