Added checkout action push_env job

--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+                
       - name: Load environment
         run: |
           echo "${{ secrets.DJANGO_ENV }}" > djangoenv
