Added 'runs-on' to get_env job

--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -12,6 +12,8 @@ permissions:
 
 jobs:
   get_env:
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
