--- a/.github/workflows/pushenv_S3_dev.yaml
+++ b/.github/workflows/pushenv_S3_dev.yaml
@@ -38,6 +38,4 @@ jobs:
         run: |
           echo "${{ secrets.env }}" > envfile
           source envfile
-          export bucket=${{ secrets.bucket }}
-          export targetname=${{ inputs.targetname }}
-          aws s3 cp envfile s3://$bucket/$targetname
+          aws s3 cp envfile s3://${{ secrets.bucket }}/${{ inputs.targetname }}
