--- a/localstaging/django_celery.yml
+++ b/localstaging/django_celery.yml
@@ -69,3 +69,4 @@ services:
     volumes:
       - ../portfolio_api:/app
     command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate && python manage.py create_oauth_app && gunicorn portfolio_api.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+    # command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate && python manage.py create_oauth_app && python manage.py runserver 0.0.0.0:8000"
