--- a/.github/workflows/redeploy_tasks_dev.yaml
+++ b/.github/workflows/redeploy_tasks_dev.yaml
@@ -38,4 +38,10 @@ jobs:
       - name: Redeploy Celery worker service
         run: |
           source djangoenv
-          aws ecs update-service --cluster $AWS_TASK_CLUSTER_NAME_DEV --service $AWS_SERVICE_WORKER_NAME_DEV --force-new-deployment          
+          aws ecs update-service --cluster $AWS_TASK_CLUSTER_NAME_DEV --service $AWS_SERVICE_WORKER_NAME_DEV --force-new-deployment
+
+      - name: Redeploy Celery worker service
+        run: |
+          source djangoenv
+          aws ecs update-service --cluster $AWS_TASK_CLUSTER_NAME_DEV --service $AWS_SERVICE_BEAT_NAME_DEV --force-new-deployment          
+
