--- a/.github/workflows/redeploy_tasks_dev.yaml
+++ b/.github/workflows/redeploy_tasks_dev.yaml
@@ -40,7 +40,7 @@ jobs:
           source djangoenv
           aws ecs update-service --cluster $AWS_TASK_CLUSTER_NAME_DEV --service $AWS_SERVICE_WORKER_NAME_DEV --force-new-deployment
 
-      - name: Redeploy Celery worker service
+      - name: Redeploy Celery beat service
         run: |
           source djangoenv
           aws ecs update-service --cluster $AWS_TASK_CLUSTER_NAME_DEV --service $AWS_SERVICE_BEAT_NAME_DEV --force-new-deployment          
