--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -24,5 +24,6 @@ jobs:
         run: docker compose up -d
 
       - name: Run tests
+        working-directory: ./localstaging
         run: |
           docker compose exec django python manage.py test
