update: set django test workflow as entry point for CI/CD runs

--- a/.github/workflows/buildpush_stage.yaml
+++ b/.github/workflows/buildpush_stage.yaml
@@ -1,9 +1,11 @@
 name: Build and Push to ECR (Stage)
 
 on:
-  push:
-    branches:
-      - stage
+  workflow_run:
+    workflows:
+      - 'Run Django Tests (Stage)'
+    types:
+      - completed
 
 permissions:
   id-token: write
@@ -12,6 +14,7 @@ permissions:
 
 jobs:
   get_env:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     outputs:
       ENV_BUCKET: ${{ steps.load_env.outputs.ENV_BUCKET }}
