--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -1,9 +1,11 @@
 name: Build and Push to ECR (Dev)
 
 on:
-  push:
-    branches:
-      - dev
+  workflow_run:
+    workflows:
+      - 'Run Django Tests (Dev)'
+    types:
+      - completed
 
 permissions:
   id-token: write
@@ -12,6 +14,7 @@ permissions:
 
 jobs:
   get_env:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     outputs:
       ENV_BUCKET: ${{ steps.load_env.outputs.ENV_BUCKET }}
