fix: added github.event.workflow_run.head_branch to downstream workflows

--- a/.github/workflows/buildpush_dev.yaml
+++ b/.github/workflows/buildpush_dev.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: Load environment
         id: load_env
