--- a/.github/workflows/redeploy_tasks_stage.yaml
+++ b/.github/workflows/redeploy_tasks_stage.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
