--- a/.github/workflows/buildpush_stage.yaml
+++ b/.github/workflows/buildpush_stage.yaml
@@ -49,7 +49,9 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4         
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
