--- a/.github/workflows/buildpush_stage.yaml
+++ b/.github/workflows/buildpush_stage.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+          ref: "stage"
 
       - name: Load environment
         id: load_env
@@ -51,7 +51,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+          ref: "stage"
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
